opsi-script-beautifier (4.2.0.4-1)

 * fix EndFunc detection
 * fix indentation of indented opsiservicecall section (e.g. inside deffunc)

-- d.oertel <d.oertel@uib.de> Fri , 23 Sep 2022 15:00:00 + 0100


opsi-script-beautifier (4.2.0.3-1)

 * accept *.opsiinc as opsi-script extension

-- d.oertel <d.oertel@uib.de> Mon , 08 Aug 2022 15:00:00 + 0100


opsi-script-beautifier (4.2.0.2-1) stable; urgency=medium

 * More Logs on Loglevel 7
 * Fix in determine indent in don't touch sections using countLeadingWhitespaces
   and replace the original ident by the new one

-- d.oertel <d.oertel@uib.de> Tue , 06 July 2021 15:00:00 + 0100

opsi-script-beautifier (4.2.0.1-1) stable; urgency=medium

 * define OPSI_AS_USER
 * define GUI (in GUI project to avoid writelns

-- d.oertel <d.oertel@uib.de> Tue , 08 June 2021 15:00:00 + 0100

opsi-script-beautifier (4.2.0.0-1) stable; urgency=medium

 * additional section handling (m.hammel)

-- d.oertel <d.oertel@uib.de> Fri , 28 May 2021 15:00:00 + 0100

opsi-script-beautifier (4.1.0.4-1) stable; urgency=medium

 * fix in: gui: added -dGUI Option to avoid writeln while GUI

-- d.oertel <d.oertel@uib.de> Wed , 16 Dec 2020 15:00:00 + 0100

opsi-script-beautifier (4.1.0.3-1) stable; urgency=medium

 * gui: added -dGUI Option to avoid writeln while GUI

-- d.oertel <d.oertel@uib.de> Tue , 15 Dec 2020 15:00:00 + 0100

opsi-script-beautifier (4.1.0.2-1) stable; urgency=medium

 * fix for sub and other primary sections
 * added gui version
 * added openif report

-- d.oertel <d.oertel@uib.de> Tue , 09 Nov 2020 15:00:00 + 0100

opsi-script-beautifier (4.1.0.1-1) stable; urgency=medium

 * look for configuration file (beautify.ini) in program directory by default
 * use last param as file argument by default
 * -dOPSI -dOPSI_AS_USER

-- d.oertel <d.oertel@uib.de> Wed, 01 Apr 2020 15:00:00 + 0100