@@ -19,9 +19,8 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="4"/>
-      <MinorVersionNr Value="2"/>
-      <BuildNr Value="4"/>
-      <StringTable CompanyName="uib gmbh" FileDescription="opsi-script-beautifier gui" InternalName="opsi-script-beautifier gui" LegalCopyright="AGPLv3+" ProductName="opsi" ProductVersion="4.2"/>
+      <MinorVersionNr Value="3"/>
+      <StringTable CompanyName="uib gmbh" FileDescription="opsi-script-beautifier gui" InternalName="opsi-script-beautifier gui" LegalCopyright="AGPLv3+" ProductName="opsi" ProductVersion="4.3"/>
     </VersionInfo>
     <BuildModes Count="3">
       <Item1 Name="Default" Default="True"/>
