@@ -1,3 +1,10 @@
+opsi-script-beautifier (4.3.0.0-1)
+
+ * command line opsi-script-beautifier.exe is now stdin and stdout enabled
+   use command line parameter -s or --stdinout to read from stdin and write to stdout
+
+-- d.oertel <d.oertel@uib.de> 2024-07-03
+
 opsi-script-beautifier (4.2.0.4-1)
 
  * fix EndFunc detection
